2003-02-21  Darin Adler  <darin@apple.com>

        Reviewed by Dave.

        - fixed a problem that was causing layout tests to give inconsistent results

        * kwq/KWQPixmap.mm:
        (QPixmap::size): Handle case of nil image so we don't use the uninitialized
        result of dispatching a method to a structure-returning function.
        (QPixmap::rect): Ditto.
        (QPixmap::width): Ditto.
        (QPixmap::height): Ditto.

2003-02-21  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - Made it possible to run the layout tests in a Deployment version

        * kwq/KWQRenderTreeDebug.cpp: (externalRepresentation): Remove #ifndef NDEBUG.
        * kwq/KWQRenderTreeDebug.h: Remove #ifndef NDEBUG.
        * kwq/WebCoreBridge.mm: (-[WebCoreBridge renderTreeAsExternalRepresentation]):
        Remove #ifndef NDEBUG.

2003-02-21  Darin Adler  <darin@apple.com>

        * kwq/KWQRenderTreeDebug.cpp: (write): Add missing spaces in render
        tree dump format.

2003-02-20  Maciej Stachowiak  <mjs@apple.com>

        Revert Dave's patch to these files, since it turned out to cause
	layout regressions.

        * khtml/rendering/render_layer.cpp:
        (RenderLayer::updateLayerPosition):
        * khtml/rendering/render_object.cpp:
        (RenderObject::setLayouted):
        (RenderObject::container):

2003-02-20  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin Adler.

	- fixed 3173276 - hang in kjs string at iteslj.org page

        * khtml/html/htmltokenizer.cpp:
        (HTMLTokenizer::addPending): Leave whitespace unmolested inside
	<script>, so that literal tabs in strings come through as tabs,
	not spaces.

2003-02-20  Darin Adler  <darin@apple.com>

        Reviewed by Trey.

        - fixed 3177310 -- REGRESSION: "serif" mapped to "fixed"
        
        Fixed a typo where the serif method was returning the fixed font name.
        Also made this class use inlining for almost everything -- yields a miniscule